--- a/assets/css/main3.css
+++ b/assets/css/main3.css
@@ -1,39 +1,70 @@
-.container {
+.header {
   background-color: #eee;
   width: 100%;
   margin: 30px auto;
+  padding: 30px;
 
   display: grid;
-  grid-template-rows: 150px 150px;
-  grid-template-columns: 150px 150px 150px;
+  grid-template-rows: repeat (5, 1fr);
+  grid-template-columns: repeat(5, 1fr);
 
 }
 
-.item1 {
+.box1 {
   background-color: orange;
+  grid-column: 1 / 4;
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 
 }
 
-.item2 {
-  background-color: greenyellow;
-
-}
-
-.item3 {
+.box2 {
   background-color: violet;
   
+  
 }
 
-.item4 {
+.box3 {
   background-color: pink;
-  
+ 
 }
 
-.item5 {
+.box4 {
   background-color: blue;
+ 
+}
+
+.box5 {
+  background-color: brown;
   
 }
 
-.item6 {
-  background-color: brown;
+
+* {box-sizing: border-box;}
+
+.header {
+  border: 2px solid #f76707;
+  border-radius: 5px;
+  background-color: #fff4e6;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.box {
+  border: 2px solid #ffa94d;
+  border-radius: 5px;
+  background-color: #ffd8a8;
+  padding: 1em;
+  color: #d9480f;
+}
+
+.nested {
+  border: 2px solid #ffec99;
+  border-radius: 5px;
+  background-color: #fff9db;
+  padding: 1em;
 }
