--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,151 @@
-/*.basic-grid {
-  height: 100%;
+* {box-sizing: border-box;}
+
+.header {
+  background-color: #eee;
+  width: 100%;
+  margin: 30px auto;
+  padding: 30px;
+
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 96px auto 72px;
-}*/
+  grid-template-rows: repeat (5, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+
+}
+
+.box {
+  color: black;
+}
+
+.box1 {
+  background-color: rgb(255, 255, 255);
+  grid-column-start: 1;
+  grid-column-end: 1.5;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  
+  color: rgba(0, 0, 0, 1);
+  font-family: 'Proxima Nova';
+  font-weight: 800;
+  font-size: 30px;
+
+  justify-content: center;
+
+ 
+
+}
+
+.box2 {
+  background-color: rgb(255, 255, 255);
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 4;
+
+  
+  
+}
+
+
+#square-border {
+  background: #FFF;
+  border: 1px solid #000000;
+  width: 140px;
+  height: 30px;
+  text-align: center;
+  position: absolute;
+  top: 110px;
+
+}
+
+
+#circle { 
+  width: 20px;
+  height: 20px;
+  background: rgba(0, 238, 187, 1);
+  -moz-border-radius: 70px; 
+  -webkit-border-radius: 70px; 
+  border-radius: 70px;
+  float: left;
+  position: absolute;
+  top: 4px;
+}
+
+.box3 {
+  
+  font-family: 'Proxima Nova';
+  text-align: center;
+  
+}
+
+.box4 {
+  background-color: blue;
+ 
+}
+
+.box5 {
+  justify-content: center;
+}
+
+.box6 {
+  background-color: rgb(255, 255, 255);
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 4;
+
+  font-family: 'Proxima Nova';
+  font-weight: 400;
+  color: rgba(0, 0, 0, 1);
+  font-size: 12px;
+
+  justify-content: center;
+
+
+
+}
+
+.box7 {
+  background-color: grey;
+
+}
+
+.box8 {
+  background-color: grey;
+
+}
+
+.box9 {
+  background-color: grey;
+
+}
+
+.box10 {
+  background-color: grey;
+
+}
+
+.box11 {
+  background-color: grey;
+
+}
+
+.box12 {
+  background-color: grey;
+
+}
+
+.box13 {
+  background-color: grey;
+
+}
+
+.box14 {
+  background-color: grey;
+
+}
+
+.box15 {
+  background-color: grey;
+
+}
 
