--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 .header {
   background-color: #eee;
   grid-template-rows: repeat(3, 1fr);
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: 2.5fr 2px 0.3fr repeat(3, 1fr);
  
 
 }
