--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,50 +5,20 @@
   /* margin: 30px auto; */
   padding: 10% 7%;
   display: grid;
+  justify-content: center;
 
 }
 
 .header {
-  background-color: #eee;
+  background-color: rgb(255, 255, 255);
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: 2.5fr 2px 0.3fr repeat(3, 1fr);
- 
 
-}
-
-.box {
-  color: black;
-}
-
-.box1 {
-  background-color: rgb(255, 255, 255);
-  grid-column-start: 1;
-  grid-column-end: 1.5;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  
-  color: rgba(0, 0, 0, 1);
   font-family: 'Proxima Nova';
-  font-weight: 800;
-  font-size: 30px;
-
-  justify-content: center;
-
+  color: rgba(0, 0, 0, 1);
+  text-align: left;
  
-
 }
-
-.box2 {
-  background-color: rgb(255, 255, 255);
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 4;
-
-  
-  
-}
-
 
 #square-border {
   background: #FFF;
@@ -58,7 +28,9 @@
   text-align: center;
   position: absolute;
   top: 110px;
+  
 
+  
 }
 
 
@@ -74,6 +46,41 @@
   top: 4px;
 }
 
+
+.box {
+  color: black;
+}
+
+.box1 {
+  background-color: rgb(255, 255, 255);
+  grid-column-start: 1;
+  grid-column-end: 1.5;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  
+  
+  
+  font-weight: 800;
+  font-size: 30px;
+
+  justify-content: center;
+
+ 
+
+}
+
+.box2, .trennlinie {
+  background-color: rgb(255, 255, 255);
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 4;
+  
+  display: flex;
+  align-self: center; 
+
+}
+
 .box3 {
   
   font-family: 'Proxima Nova';
@@ -82,12 +89,12 @@
 }
 
 .box4 {
-  background-color: blue;
+  background-color: white;
  
 }
 
 .box5 {
-  justify-content: center;
+  justify-content: top;
 }
 
 .box6 {
@@ -97,7 +104,6 @@
   grid-row-start: 2;
   grid-row-end: 4;
 
-  font-family: 'Proxima Nova';
   font-weight: 400;
   color: rgba(0, 0, 0, 1);
   font-size: 12px;
@@ -109,47 +115,47 @@
 }
 
 .box7 {
-  background-color: grey;
+  background-color: white;
 
 }
 
 .box8 {
-  background-color: grey;
+  
 
 }
 
 .box9 {
-  background-color: grey;
+  background-color: white;
 
 }
 
 .box10 {
-  background-color: grey;
+  background-color: white;
 
 }
 
 .box11 {
-  background-color: grey;
+  background-color: white;
 
 }
 
 .box12 {
-  background-color: grey;
+  background-color: white;
 
 }
 
 .box13 {
-  background-color: grey;
+  background-color: white;
 
 }
 
 .box14 {
-  background-color: grey;
+  background-color: white;
 
 }
 
 .box15 {
-  background-color: grey;
+  background-color: white;
 
 }
 
@@ -165,4 +171,42 @@
 
 
 }
+/*
+.body-item1 {
+	background: blue;
+	text-align: center;
+	border: black 5px solid;
+	grid-area: area1;
+}
+.body-item2 {
+	background: red;
+	text-align: center;
+	border: black 5px solid;
+	grid-area: area2;
+}
+.body-item3 {
+	background: green;
+	text-align: center;
+	border: black 5px solid;
+	grid-area: area3;
+}
+.body-item4 {
+	background: yellow;
+	text-align: center;
+	border: black 5px solid;
+	grid-area: area4;
+}
 
+.body-item5 {
+	background: green;
+	text-align: center;
+	border: black 5px solid;
+	grid-area: area3;
+}
+.body-item6 {
+	background: yellow;
+	text-align: center;
+	border: black 5px solid;
+	grid-area: area4;
+}
+*/
