--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,17 @@
 * {box-sizing: border-box;}
 
+@font-face {
+  font-family: "Proxima Nova Bold";
+  src: url("/i8-Fonts/ProximaNova-Bold.otf") format("otf");  /*font anpassen und file unter assets ablegen */
+}
+
 .header, .body {
   width: 100vw;
   /* margin: 30px auto; */
   padding: 10% 7%;
   display: grid;
   justify-content: center;
+  font-family: 'Proxima Nova Bold' !important;
 
 }
 
@@ -13,39 +19,16 @@
   background-color: rgb(255, 255, 255);
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: 2.5fr 2px 0.3fr repeat(3, 1fr);
+  grid-template-areas: 
+  "box1 box2 . box3 box4  box8" 
+  "box1 box2 . box6 box7 ."
+  "box1 box2 . box5 . ." ;
 
-  font-family: 'Proxima Nova';
+  
   color: rgba(0, 0, 0, 1);
   text-align: left;
  
 }
-
-#square-border {
-  background: #FFF;
-  border: 1px solid #000000;
-  width: 140px;
-  height: 30px;
-  text-align: center;
-  position: absolute;
-  top: 110px;
-  
-
-  
-}
-
-
-#circle { 
-  width: 20px;
-  height: 20px;
-  background: rgba(0, 238, 187, 1);
-  -moz-border-radius: 70px; 
-  -webkit-border-radius: 70px; 
-  border-radius: 70px;
-  float: left;
-  position: absolute;
-  top: 4px;
-}
-
 
 .box {
   color: black;
@@ -53,29 +36,19 @@
 
 .box1 {
   background-color: rgb(255, 255, 255);
-  grid-column-start: 1;
-  grid-column-end: 1.5;
-  grid-row-start: 1;
-  grid-row-end: 2;
   
-  
+  grid-area: box1;
   
   font-weight: 800;
   font-size: 30px;
-
+  
   justify-content: center;
-
- 
-
+  
 }
 
-.box2, .trennlinie {
-  background-color: rgb(255, 255, 255);
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 4;
-  
+.box2  {
+
+  grid-area: box2;
   display: flex;
   align-self: center; 
 
@@ -83,26 +56,28 @@
 
 .box3 {
   
+  grid-area: box3;
   font-family: 'Proxima Nova';
   text-align: center;
   
 }
 
 .box4 {
-  background-color: white;
+  
+  grid-area: box4;
  
 }
 
 .box5 {
   justify-content: top;
+  grid-area: box5;
 }
 
 .box6 {
+
+  grid-area: box6;
   background-color: rgb(255, 255, 255);
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 2;
-  grid-row-end: 4;
+  
 
   font-weight: 400;
   color: rgba(0, 0, 0, 1);
@@ -111,52 +86,16 @@
   justify-content: center;
 
 
-
 }
 
 .box7 {
-  background-color: white;
-
+  
+  grid-area: box7;
 }
 
 .box8 {
   
-
-}
-
-.box9 {
-  background-color: white;
-
-}
-
-.box10 {
-  background-color: white;
-
-}
-
-.box11 {
-  background-color: white;
-
-}
-
-.box12 {
-  background-color: white;
-
-}
-
-.box13 {
-  background-color: white;
-
-}
-
-.box14 {
-  background-color: white;
-
-}
-
-.box15 {
-  background-color: white;
-
+  grid-area: box8;
 }
 
 /* BodyComponent */ 
