--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,24 +74,20 @@ h5 {
   font-family: "ProximaNova-Bold";
   text-align: center;
   margin-right: 2.2rem;
-  
 }
 
 .square-border {
   font-family: "ProximaNova-Bold";
   cursor: pointer;
   justify-content: center;
-
 }
 .square-border:hover {
   transform: translateY(-3px);
-  box-shadow: 0 20px 10px rgba(0, 0, 0, .5);
-
+  box-shadow: 0 20px 10px rgba(0, 0, 0, 0.5);
 }
 
 .square-border:active {
-  transform: translateY(-1px); 
-
+  transform: translateY(-1px);
 }
 
 .box4_strategy {
@@ -102,19 +98,16 @@ h5 {
 .box5_creative {
   grid-area: box5;
   margin-right: 2.2rem;
-  
 }
 
 .box6_operation {
   grid-area: box6;
   margin-right: 2.2rem;
-  
 }
 
 .box7_marketing {
   grid-area: box7;
   margin-left: 1.7rem;
-  
 }
 
 .box8_logo {
@@ -137,17 +130,8 @@ h5 {
     "line1 line2 group36 group36 line8 line9"
     "line1 team5 team6 team7 line8 line9"
     "line1 line3 line4 line10 line8 line9"
-    "team8 team9 team10 team11 team12 team13"
+    "team8 team9 team10 team11 team12 team13";
 }
-
-
-.singleGrid {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  
-}
-
 
 .team1 {
   grid-area: team1;
@@ -284,53 +268,50 @@ div[class^="team"] {
   margin-right: 5px;
 }
 
-
 .unit {
   display: inline-flex;
   width: 100%;
-  padding: 1% 1%;
-
+  padding: 10% 7%;
   flex-direction: row;
   flex-wrap: wrap;
-  
-
+  justify-content: space-around;
   background-color: rgb(229, 229, 229);
 }
-
-.unit>div {
-  margin: 2%;
+.card_Parent {
+  flex: 1;
+  margin: 0 2% 2% 0;
 }
 
-.testBox {
-  border: solid 2px;
+.card_Content {
+  /* border: solid 2px;
   width: fit-content;
   height: 320px;
   background-color: white;
 
   border-color: black;
-  position: relative;
+  position: relative; */
+  width: fit-content;
+  height: auto;
+}
+.card_sub_content {
+  padding: 5% 5%;
+  display: flex;
+  background-color: white;
+}
+.card_sub_content .head_icon_child {
+  height: 70px;
+  width: 70px;
+  margin-right: 30px;
 }
 
 .flexbox_2 {
-    display: flex;
-      flex-direction: row;
-      align-items: center;
-      font-family: "ProximaNova-Bold";
-     
-}
-
-.content {
-  position: absolute;
-  top: 10%;
-  left: 25%;
-}
-
-.employeeHeadIcon_2 {
-  padding: 5% 5%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-family: "ProximaNova-Bold";
 }
 
 .NameMitarbeiter {
-  
   top: 14%;
   left: 25%;
   font-family: "ProximaNova-Bold";
@@ -338,11 +319,7 @@ div[class^="team"] {
   line-height: 40px;
 }
 
-
-
-
 .employeeDescription_2 {
-  
   top: 42%;
   left: 25%;
   right: 5%;
@@ -352,7 +329,6 @@ div[class^="team"] {
 }
 
 .employeeContakt_2 {
-
   top: 75%;
   left: 25%;
   font-family: "ProximaNova-Bold";
