--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,6 +266,7 @@ div[class^="team"] {
 
 .star {
   margin-right: 5px;
+  margin-top: -5px;
 }
 
 .unit {
@@ -328,13 +329,12 @@ div[class^="team"] {
   font-size: 16px;
 }
 
-.employeeContakt_2 {
-  top: 75%;
-  left: 25%;
+.employeeContact {
   font-family: "ProximaNova-Bold";
   color: black;
-  font-size: 18px;
+  font-size: 1.2rem;
 }
+
 
 /* .icon {
   grid-bilder/Ellipse 1.png
