--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,12 @@ h5 {
   margin: 0px;
 }
 
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 @font-face {
   font-family: "ProximaNova-Bold";
   src: local("ProximaNova-Bold"),
@@ -17,6 +23,7 @@ h5 {
   /* margin: 30px auto; */
   padding: 10% 7%;
   display: grid;
+  /* height: auto; */
   /* justify-content: center; */
   font-family: "ProximaNova-Bold" !important;
 }
@@ -26,12 +33,13 @@ h5 {
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: 2.5fr 2px 0.3fr repeat(2, 1fr);
   grid-template-areas:
-    "box1 box2 . box3 box4  box8"
-    "box1 box2 . box6 box7 ."
-    "box1 box2 . box5 . .";
+    "box1 box2 box3 box4  box8"
+    "box1 box2 box6 box7 ."
+    "box1 box2 box5 . .";
 
   color: rgba(0, 0, 0, 1);
   text-align: left;
+  grid-gap: 20px;
 }
 
 .box {
@@ -65,8 +73,8 @@ h5 {
 
 .box2_trennlinie {
   grid-area: box2;
-  margin-left: 3rem;
-  margin-bottom: 3rem;
+  /* margin-left: 3rem;
+  margin-bottom: 3rem; */
 }
 
 .box3_dev {
@@ -120,11 +128,11 @@ h5 {
 
 .body {
   background-color: rgb(229, 229, 229);
-  column-gap: 6rem;
+  column-gap: 20px;
+  row-gap: 25px;
 }
 
 .nav_home {
-  grid-template-rows: 180px 180px 180px 180px 180px max-content;
   grid-template-columns: repeat(6, 1fr);
   grid-template-areas:
     "team1 team2 . . team3 team4"
@@ -139,86 +147,81 @@ h5 {
     grid-template-rows: repeat(6, 180px 20px max-content);
     grid-template-columns: repeat(1, 1fr);
     grid-template-areas:
-    "team1"
-    "lineNew1"
-    "team8"
-    "team2"
-    "lineNew2"
-    "team5"
-    "lineNew3"
-    "team9"
-    "group36"
-    "team6"
-    "lineNew4"
-    "team10"
-    "team7"
-    "lineNew10"
-    "team11"
-    "team3"
-    "lineNew8"
-    "team12"
-    "team4"
-    "lineNew9"
-    "team13"
-    ; 
+      "team1"
+      "lineNew1"
+      "team8"
+      "team2"
+      "lineNew2"
+      "team5"
+      "lineNew3"
+      "team9"
+      "group36"
+      "team6"
+      "lineNew4"
+      "team10"
+      "team7"
+      "lineNew10"
+      "team11"
+      "team3"
+      "lineNew8"
+      "team12"
+      "team4"
+      "lineNew9"
+      "team13";
   }
 
-@media(max-width: 760px) {
-  .team1[data-aos=zoom-in-right] {
+  .team1[data-aos="zoom-in-right"] {
     -webkit-transform: translateX(0);
     transform: translateX(0);
   }
-}
 
-@media(max-width: 760px) {
-  .lineNew1[data-aos=zoom-in] {
+  .lineNew1[data-aos="zoom-in"] {
     -webkit-transform: translateX(0);
     transform: translateX(0);
   }
-}
 
-@media(max-width: 760px) {
-  .team8[data-aos=fade-up] {
+  .team8[data-aos="fade-up"] {
     -webkit-transform: translateX(0);
     transform: translateX(0);
   }
-}
 
-@media(max-width: 760px) {
-  .team2[data-aos=zoom-in] {
+  .team2[data-aos="zoom-in"] {
     -webkit-transform: translateX(0);
     transform: translateX(0);
   }
-}
 
-@media(max-width: 760px) {
-  .lineNew2[data-aos=zoom-in] {
+  .lineNew2[data-aos="zoom-in"] {
     -webkit-transform: translateX(0);
     transform: translateX(0);
   }
-}
 
-@media(max-width: 760px) {
-  .team5[data-aos=zoom-in] {
+  .team5[data-aos="zoom-in"] {
     -webkit-transform: translateX(0);
     transform: translateX(0);
   }
-}
 
   .header {
-    grid-template-rows: repeat(9, 1fr);
-      grid-template-columns: 1fr;
-      grid-template-areas: 
-      "box1" 
-      "box2"
-        /* "."  */
-        "box3" 
-        "box6"
-        "box4"
-        "box7"
-        "box8"
-        ".";
-    overflow: hidden;
+    grid-template-rows: 1fr repeat(6, 120px);
+    grid-template-columns: auto;
+    grid-template-areas:
+      "box1"
+      "box3"
+      "box6"
+      "box4"
+      "box7"
+      "box5";
+    grid-gap: 0;
+  }
+  .header .box {
+    margin-right: 0;
+  }
+  .box7_marketing,
+  .box4_strategy {
+    margin-left: 0;
+  }
+  .i8-text p {
+    font-size: 16px;
+    line-height: 18px;
   }
 }
 
@@ -282,10 +285,9 @@ h5 {
 }
 
 .lineNew1 {
-  background-image: url('../../grid-bilder/Line-1.png');
+  background-image: url("../../grid-bilder/Line-1.png");
   background-size: contain;
   grid-area: lineNew1;
-
 }
 
 .line2 {
@@ -296,10 +298,9 @@ h5 {
 }
 
 .lineNew2 {
-  background-image: url('../../grid-bilder/Line-2.png');
+  background-image: url("../../grid-bilder/Line-2.png");
   background-size: contain;
   grid-area: lineNew2;
-
 }
 
 .line3 {
@@ -310,10 +311,9 @@ h5 {
 }
 
 .lineNew3 {
-  background-image: url('../../grid-bilder/Line-3.png');
+  background-image: url("../../grid-bilder/Line-3.png");
   background-size: contain;
   grid-area: lineNew3;
-
 }
 
 .line4 {
@@ -324,10 +324,9 @@ h5 {
 }
 
 .lineNew4 {
-  background-image: url('../../grid-bilder/Line-4.png');
+  background-image: url("../../grid-bilder/Line-4.png");
   background-size: contain;
   grid-area: lineNew4;
-
 }
 /*
 .line5 {
@@ -360,10 +359,9 @@ h5 {
 }
 
 .lineNew8 {
-  background-image: url('../../grid-bilder/Line-8.png');
+  background-image: url("../../grid-bilder/Line-8.png");
   background-size: contain;
   grid-area: lineNew8;
-
 }
 
 .line9 {
@@ -374,10 +372,9 @@ h5 {
 }
 
 .lineNew9 {
-  background-image: url('../../grid-bilder/Line-9.png');
+  background-image: url("../../grid-bilder/Line-9.png");
   background-size: contain;
   grid-area: lineNew9;
-
 }
 
 .line10 {
@@ -388,10 +385,9 @@ h5 {
 }
 
 .lineNew10 {
-  background-image: url('../../grid-bilder/Line-10.png');
+  background-image: url("../../grid-bilder/Line-10.png");
   background-size: contain;
   grid-area: lineNew10;
-
 }
 
 div[class^="team"] {
@@ -401,6 +397,9 @@ div[class^="team"] {
   font-family: "ProximaNova-Bold" !important;
   position: relative;
   margin-bottom: auto;
+}
+div[class^="line"] {
+  /* padding: 30px; */
 }
 
 .star {
@@ -459,6 +458,13 @@ div[class^="team"] {
   line-height: 40px;
 }
 
+h3 {
+  font-size: 20px;
+}
+h5 {
+  font-size: 14px;
+}
+
 .employeeDescription_2 {
   top: 42%;
   left: 25%;
@@ -473,7 +479,6 @@ div[class^="team"] {
   color: black;
   font-size: 1.2rem;
 }
-
 
 /* .icon {
   grid-bilder/Ellipse 1.png
@@ -504,13 +509,13 @@ h4 {
   margin: 0px;
   margin-left: 15px;
   text-transform: uppercase;
-  font-family: 'ProximaNova-Bold';
+  font-family: "ProximaNova-Bold";
   font-style: bold;
   font-size: 20px;
   line-height: 40px;
   text-align: Center;
-  Vertical-align: Top;
-  Letter-spacing: -1%;
+  vertical-align: Top;
+  letter-spacing: -1%;
 }
 
 /*
@@ -518,7 +523,7 @@ GroupContainer
 */
 
 .employee {
-  padding: 50px 50px 0px 50px;
+  padding: 20% 20% 0px 20%;
 }
 
 .TeamColor {
