--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 @font-face {
@@ -90,7 +91,7 @@ body {
 }
 .square-border:hover {
   transform: translateY(-3px);
-  box-shadow: 0 20px 10px rgba(0, 0, 0, 0.5);
+  /* box-shadow: 0 20px 10px rgba(0, 0, 0, 0.5); */
 }
 
 .square-border:active {
@@ -494,36 +495,6 @@ GroupContainer
     grid-gap: 60px;
     padding: 20% 7%;
   }
-
-  /* .team1[data-aos="zoom-in-right"] {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-
-  .lineNew1[data-aos="zoom-in"] {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-
-  .team8[data-aos="fade-up"] {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-
-  .team2[data-aos="zoom-in"] {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-
-  .lineNew2[data-aos="zoom-in"] {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-
-  .team5[data-aos="zoom-in"] {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  } */
 
   .header {
     grid-template-rows: repeat(8, auto);
